# wasm-benchmark-i128

./: Cargo.toml  README.md  global.js  index.html  jsc.js  package-lock.json  package.json  run-node.js  spidermonkey-global.js  spidermonkey.js  v8.js
benches/all/: add.rs  main.rs  mul.rs
src/: cmp.rs  div.rs  main.rs  mul.rs  shift.rs
web/: index.js  list-benchmarks.js  worker.js
