[package]
name = "wasm-benchmark-i128"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
blind-rsa-signatures = "0.14.1"
criterion = { version = "0.5.1", default-features = false }
num-bigint-dig = "0.8.4"
rand = { version = "0.8.5", features = ['small_rng'] }

[[bench]]
name = "all"
harness = false
